--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.profiles.active=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
+spring.data.mongodb.database=springmongo
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
