--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.profiles.active=true
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.initialization-mode=always
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
+logging.level.org.springframework.data.mongodb.core.ReactiveMongoTemplate=DEBUG
 spring.data.mongodb.database=springmongo
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
